cleaned things up a bit

--- a/templates/index.html
+++ b/templates/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE HTML PUBLIC "-//IETF//DTD HTML//EN">
 <html> <head>
-<title>Leaflet Test</title>
+<title>Pizza Places</title>
 
 <!-- custom stylesheet stored in static/css !-->
 <link rel="stylesheet" type="text/css" href="../static/css/style.css"
@@ -26,11 +26,12 @@ media="screen"/>
 
 <body>
 
-<div id="mapid"></div>
+<div id="mapid">
 
 
 
 <script>
+
 var mymap = L.map('mapid').setView([44.0521, -123.0868], 14);
 
     var tiles = L.esri.basemapLayer("Streets").addTo(mymap);
@@ -62,6 +63,18 @@ L.tileLayer('https://api.tiles.mapbox.com/v4/{id}/{z}/{x}/{y}.png?access_token={
 //feature group for interest points !-->
 var InterestPoints = L.featureGroup().addTo(mymap).on("click", Interestclick);
 
+//custom icon /////
+
+var pizza = L.icon({
+    iconUrl: 'pizza.png',
+    shadowUrl: 'marker-shadow.png',
+    iconSize:     [38, 95], // size of the icon
+    shadowSize:   [50, 64], // size of the shadow
+    iconAnchor:   [22, 94], // point of the icon which will correspond to marker's location
+    shadowAnchor: [4, 62],  // the same for the shadow
+    popupAnchor:  [-3, -76] // point from which the popup should open relative to the iconAnchor
+});
+
 $(document).ready(function(){
 		//request json information from flask 
        $.getJSON("/_interest_points", function(data){
@@ -72,9 +85,10 @@ $(document).ready(function(){
         var lat = data[i].lat; 
         var lng = data[i].lng;
         var name = data[i].name; 
+        var web = data[i].web;
 
         var markerLocation = new L.LatLng(lat,lng);
-        marker = new L.Marker(markerLocation).addTo(InterestPoints).bindPopup("Hello I am " + name);
+        marker = new L.Marker(markerLocation).addTo(InterestPoints).bindPopup(name + "<br>" + web);
     }
 
        });
@@ -110,6 +124,6 @@ mymap.on('click', function(e) {
 
   
 </script>
-
+</div>
 
 </body> </html>
